# IntelligentSystemsEngineering

./: .gitignore  README.md  pyproject.toml
notebooks/: analysis.ipynb  anomaly_detection.ipynb  baseline.ipynb  ensemble.ipynb  regression.ipynb  report.ipynb
params/: best_lgb_params_anomaly.yaml  best_lgb_params_reg.yaml  best_preprocessor_config_anomaly.yaml  best_preprocessor_config_reg.yaml
src/: metrics.py
src/config/: base_config.py  default_config.py  preprocess.py
src/features/: base_encoder.py  condition.py  cylinders.py  drive.py  fuel.py  manufacturer.py  paint_color.py  preprocess.py  state.py  target_encoding.py  transmission.py  type.py  year.py
src/suggest_params/: anomaly_detection.py  preprocess.py  regression.py
