[project]
name = "topica"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib-venn>=1.1.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "seaborn>=0.13.2",
    "scikit-learn>=1.7.0",
    "lightgbm>=4.6.0",
    "papermill>=2.6.0",
    "optuna>=4.4.0",
    "ipywidgets>=8.1.7",
    "mypy>=1.17.0",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
